cmake_minimum_required(VERSION 3.17)
project(lines)

set(CMAKE_CXX_STANDARD 17)

FILE(GLOB TARGET_H "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
FILE(GLOB TARGET_CPP "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
SET(SOURCE_FILES ${TARGET_CPP} ${TARGET_H})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(lines ${SOURCE_FILES})
